# LiveFaceReco_RaspberryPi

./: .gitignore  CMakeLists.txt  README.md
cmake/: Tests.cmake
imgs/: makedataset.py
include/: FacePreprocess.h
include/ncnn/: platform.h
src/: CMakeLists.txt  arcface.cpp  arcface.h  defs.hpp  live.cpp  live.h  livefacereco.cpp  livefacereco.hpp  livefacerecov2.cpp  main.cpp  math.hpp  mtcnn_new.cpp  mtcnn_new.h
src/DatasetHandler/: abstract_dataset_handler.hpp  dataset_handler.hpp  descriptor_dataset_handler.hpp  image_dataset_handler.hpp
src/DatasetHandler/Test/: CMakeLists.txt  test_descriptor_dataset_handler.cpp  test_image_dataset_handler.cpp
src/ParallelVideoCapture/: CMakeLists.txt  parallel_video_capture.cpp  parallel_video_capture.hpp
tests/ParallelVideoCapture/: gtest_parallel_video_capture.cpp
